@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+common/button.c: Fix bug #2457751 "Unpaid items work for some things...". Now
+  dropping unpaid items on altars no longer works.
+Arvid Norlander 2009-02-03
+
 Fix out-of-bounds accessess to xxx_bonus[] (and similar) arrays.
 Andreas Kirschbaum
 
